# mcp-smart-proxy

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
src/mcp_smart_proxy/: __init__.py  __main__.py  cli.py  config.py  models.py  router.py  server.py  watcher.py
src/mcp_smart_proxy/index/: embedder.py  indexer.py  store.py
src/mcp_smart_proxy/upstream/: client.py  manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_indexer.py  test_router.py  test_server_tools.py
